--- a/libs/feature-flight-logic/src/lib/flight-table/flight-table.component.html
+++ b/libs/feature-flight-logic/src/lib/flight-table/flight-table.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<table
+<!-- <table
   class="table table-striped table-hover table-bordered table-success text-center"
 >
   <thead class="table-active table-secondary">
@@ -41,4 +41,5 @@
       <td scope="row">{{ flight.date | date }}</td>
     </tr>
   </tbody>
-</table>
+</table> -->
+<flights-data-view-flight-table [tableHeader]="tHeads" [tableData]="flightList" ></flights-data-view-flight-table>
