--- a/libs/ui-view-flights/src/lib/view-flight-table/view-flight-table.component.scss
+++ b/libs/ui-view-flights/src/lib/view-flight-table/view-flight-table.component.scss
@@ -1,5 +1,5 @@
 table {
-  font-family: arial, sans-serif;
+  font-family: Times, Times New Roman, serif;
   border-collapse: collapse;
   width: 100%;
   justify-content: center;
