--- a/libs/feature-flight-logic/src/lib/flight-table/flight-table.component.html
+++ b/libs/feature-flight-logic/src/lib/flight-table/flight-table.component.html
@@ -42,4 +42,7 @@
     </tr>
   </tbody>
 </table> -->
-<flights-data-view-flight-table [tableHeader]="tHeads" [tableData]="flightList" ></flights-data-view-flight-table>
+<flights-data-view-flight-table
+  [tableHeader]="tHeads"
+  [tableData]="flightList"
+></flights-data-view-flight-table>
