--- a/apps/shell/src/app/welcome/welcome.component.html
+++ b/apps/shell/src/app/welcome/welcome.component.html
@@ -1,7 +1,9 @@
-<div class="container-fluid d-flex justify-content-end my-4">
-  <div class="col-2 my-4">
-    <h3 class="text-wrap landingText">
-      GOOD THINGS COME TO THOSE WHO BOOK FLIGHTS...
-    </h3>
+<div class="img-bg">
+  <div class="container-fluid d-flex justify-content-end my-4 ">
+    <div class="col-2 my-4">
+      <h3 class="text-wrap landingText">
+        GOOD THINGS COME TO THOSE WHO BOOK FLIGHTS...
+      </h3>
+    </div>
   </div>
 </div>
